k8s/news-scraper/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-scraper-deployment
  labels:
    app: news-scraper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-scraper
  template:
    metadata:
      labels:
        app: news-scraper
    spec:
      containers:
        - name: news-scraper
          image: joshdavidang/news-scraper:v1
          ports:
            - containerPort: 8080
