k8s/news-scraper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-scraper-service
  labels:
    app: news-scraper
spec:
  selector:
    app: news-scraper
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
