k8s/news-scraper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-scraper-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1/news-scraper
            pathType: Prefix
            backend:
              service:
                name: news-scraper
                port:
                  number: 8080
